# code-jam-5

./: .env  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  Pipfile.lock.old  README.md  azure-pipelines.yml  config.json  config.toml  elf.upgrade_buttons.append(UpgradeButton(self, 0.1, 0.1,  game_mechanics_sketches  nohup.out  requirements.txt  save_file.json  savefile.json
Flying_frogs/: Car.py  GUI.py  README.md
YOUR_TEAM_NAME/: README.md  Requirements.md  __main__.py  cli.py  utils.py
aesthetic_ants/: Pipfile  README.md
alternative_anteaters/: .gitignore  README.md  TODO.md  anteaters.py  constants.py  game.py  requirements.txt  test.py
combined_crusaders/: .gitignore  Pipfile  README.md  __main__.py  events.py  machines.py  media.py  requirements.txt  util.py
corrupt_cats/: .flake8  README.md  requirements.txt  start.py
daily_dragons/: Pipfile  README.md  __init__.py  company.py  investment.py  main.py  news.py  organization.py  planet.py  planetary_effects.py  player.py  requirements.txt
docs/: git-how-to.md  how-judging-works.md
evident-eels/: README.md  app.db  requirements.txt  start_server.py
evident_eels/: .flake8  manage.py
faithful_fleas/: README.md  __init__.py  __main__.py  requirements.txt
flying_frogs/: GUI.py
gentle_gnomes/: .eslintrc.json  .flake8  .pre-commit-config.yaml  README.md  app.py  config.py  pyproject.toml
gentle_gnomes/src/: __init__.py  azavea.py  data.py  indicator.py  view.py
gentle_gnomes/src/static/: search.js
gentle_gnomes/src/templates/: base.html
gentle_gnomes/src/templates/view/: index.html  indicator.html  nav_item.html  results.html  search.html
gentle_gnomes/tests/: conftest.py  test_azavea.py  test_view.py
hushed_hyenas/: countries.json  countries.xlsx  country_indicators.csv  game.py  game_mechanics_sketches  game_menu.py  gameobjects.py  (+1 more)
(+429 files in other folders)
