[tool.poetry]
name = "gentle_gnomes"
version = "0.1.0"
description = "Gentle gnomes code jam submission."
authors = ["Noah <noah@coronasoftware.net>"]
license = "MIT"
packages = [ { include = "src" } ]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"